# ipmap

./: .gitignore  Cargo.toml  Makefile  README.md  Rocket.toml  default-2020-11-07.log.toml  test
.github/workflows/: rust.yml
arch/: PKGBUILD
build-deb/ipmap_0.1.6/: Cargo.toml  README.md
build-deb/ipmap_0.1.6/data/: license.html
data/: index.html  ipmap.1  ipmap.1.md  ipmap.desktop  leaflet.css  license.html  map.js  org.freedesktop.policykit.ipmap.policy
debian/: changelog  control  rules
packaging/arch/: PKGBUILD
packaging/arch/git/: PKGBUILD
packaging/arch/normal/: PKGBUILD
packaging/debian/: changelog  control  copyright  ipmap.dirs
src/: index.html  ip.rs  lib.rs  locator.rs  main.rs  page.html  web.rs
