[package]
name = "ipmap"
version = "0.1.0"
authors = ["Aditya Suresh <ethanaditya@gmail.com>", "Grant H. <grantshandy@gmail.com", "Nick Z. <nicholasz2510@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.7.0"
etherparse = "0.9.0"
serde_json = "1.0.59"
casual_logger = "0.6.5"
clap = "2.33.3"
rocket = "0.4.6"
rocket-include-static-resources = "0.9.5"
users = "0.11.0"
locator = "0.1.0"
