[package]
name = "ipmap"
version = "0.1.1"
authors = ["Aditya Suresh <ethanaditya@gmail.com>", "Grant H. <grantshandy@gmail.com>", "Nick Z. <nicholasz2510@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "An interactive map that shows connected IP addresses."
repository = "https://github.com/skylinecc/ipmap/"
keywords = ["geolocation", "ip", "locator", "map", "interactive"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.7.0"
etherparse = "0.9.0"
serde_json = "1.0.59"
casual_logger = "0.6.5"
clap = "2.33.3"
rocket = "0.4.6"
rocket-include-static-resources = "0.9.5"
users = "0.11.0"
ipgeolocate = "0.2.3"
once_cell = "1.5.2"
serde = "1.0.117"
